# human-debug

./: .gitignore  README.md  doctor_letter.txt
backend/: Procfile  README.md  pyproject.toml  railway.toml  requirements.txt
backend/data/: doctor_letter.txt
backend/src/: exploration.py  fastq_to_bam.sh  main.py  utils.py  variant-calling-workflow.sh
frontend/: .gitignore  biome.json  bun.lockb  package.json  turbo.json
frontend/apps/api/: package.json
frontend/apps/api/supabase/: seed.sql
frontend/apps/api/supabase/migrations/: 20240904194431_create_knowledge_table.sql  20240904234252_create_knowledge_content_embedding_table.sql  20240911145612_create_members_table.sql  20240911150003_create_members_role_description_embedding_table.sql  20241005104649_create_case_table.sql  20241005134055_create_report_table.sql
frontend/apps/app/: .env.example  next.config.mjs  package.json  tailwind.config.ts
frontend/apps/app/src/: env.mjs
frontend/apps/app/src/actions/: safe-action.ts  schema.ts  verify-otp-action.ts
frontend/apps/app/src/actions/cases/: create-case-action.ts  delete-case-action.ts  refresh-cases-action.ts  schema.ts
frontend/apps/app/src/actions/cases/reports/: create-report-action.ts  schema.ts
frontend/apps/app/src/actions/knowledge/: create-knowledge-action.ts  create-member-action.ts  delete-knowledge-action.ts  refresh-knowledge-action.ts  schema.ts  share-link-action.ts
frontend/apps/app/src/actions/member/: create-member-action.ts  schema.ts
frontend/apps/app/src/app/[locale]/: layout.tsx
frontend/apps/app/src/app/[locale]/(app)/(sidebar)/: layout.tsx  page.tsx
frontend/apps/app/src/app/[locale]/(public)/login/: page.tsx
frontend/apps/app/src/app/api/: actions.ts
frontend/apps/app/src/app/api/chat/analysis/: route.ts
frontend/apps/app/src/app/api/chat/cases/: route.ts
frontend/apps/app/src/app/api/chat/knowledge/: route.ts
frontend/apps/app/src/app/api/voice/: route.ts
frontend/apps/app/src/components/: EditorJS.tsx  analysis-chat.tsx  analysis-viewer.tsx  app-sidebar-nav-user.tsx  app-sidebar.tsx  create-cases-chat.tsx  create-knowledge-chat.tsx  genome-analyser.tsx  genome-dropzone.tsx  heatmap.tsx  otp-sign-in.tsx  patient-history-dropzone.tsx  phenotype-viewer.tsx  report-viewer.tsx  theme-switch.tsx
frontend/apps/app/src/components/cases/: cases-delete-button.tsx  cases-refresh-button.tsx  cases.loading.tsx  cases.server.tsx
frontend/apps/app/src/components/forms/: create-case-form.tsx  create-knowledge-form.tsx  create-user-form.tsx
frontend/apps/app/src/components/knowledge/: knowledge-delete-button.tsx  knowledge-refresh-button.tsx  knowledge.loading.tsx  knowledge.server.tsx
frontend/apps/app/src/components/users/: user-list.tsx
(+6 files in other folders)
