[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "louis", email = "louisjoejordan@gmail.com"},
    {name = "leander", email = "l.maerkisch@gmail.com"}
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "python-dotenv>=1.0.1",
    "websockets>=13.0.1",
    "openai>=1.46.0",
    "mistralai>=1.1.0",
    "instructor>=1.5.1",
]
requires-python = ">=3.12"
readme = "README.md"

[project.scripts]
start = "src.main:start"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Added pytest configuration
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
